<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@drawable/button_shape_orange"
    >

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:src="@android:drawable/btn_dialog"
        android:contentDescription="@string/close"/>

    <TextView
        android:id="@+id/tv_addPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:padding="25sp"
        android:text="@string/addPlayerText"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        android:textSize="23sp"
        android:background="@drawable/extra_more1"/>

    <EditText
        android:id="@+id/et_addPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_addPlayer"
        android:background="@color/colorWhite"
        android:maxLength="15"
        android:singleLine="true"
        android:inputType="text"
        android:hint="@string/yourName"/>

    <Button
        android:background="@drawable/button_shape_green"
        android:id="@+id/Btn_confirmAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:text="@string/confirm" />
</RelativeLayout>