<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradient_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/TV_NGPlayers"
                style="@style/textGameMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TV_NGPlayers" />

            <Button
                android:id="@+id/b_NGPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_light_red"
                android:layout_marginBottom="10dp"
                android:text="@string/b_NGPlayers"
                android:textStyle="bold|italic" />

            <ImageView
                android:layout_marginBottom="5dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@drawable/drinkingstone_logo" />

            <TextView
                android:id="@+id/TV_NGFast"
                style="@style/textGameMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TV_NGFast" />

            <Button
                android:background="@drawable/button_shape_light_red"
                android:id="@+id/b_NGFast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_NGFast"
                android:textStyle="bold|italic"/>


        </LinearLayout>

</ScrollView>