<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@drawable/shape_grey"
    >



    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:src="@android:drawable/btn_dialog"
        android:contentDescription="@string/close"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="25sp"
        android:text="Tutorial"
        android:textColor="@color/darkRed"
        android:textStyle="bold|italic"
        android:textSize="30sp"/>
    <ScrollView
        android:layout_below="@id/tv_tutorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_tutorial_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_text1"
                android:paddingTop="0dp"
                style="@style/textTutorial"/>

            <ImageView
                android:id="@+id/tutorial_img2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_tutorial"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/tv_tutorial_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_text2"
                style="@style/textTutorial"/>

        </LinearLayout>



    </ScrollView>


</RelativeLayout>